<resources>
    <string name="app_name">KotlinPSI</string>
    <string name="client_message">client_message</string>
    <string name="start">start</string>
    <string name="server_message">server_message</string>
    <string name="textview">TextView</string>
    <string name="client">client</string>
    <string name="server">server</string>
    <string name="add_data">Database</string>
    <string name="add">add</string>
    <string name="date">date</string>
    <string name="name">name</string>
    <string name="time">time</string>
    <string name="all_delete">All delete</string>
    <string name="delete">delete</string>
    <string name="server_s_ip_adress">Server\'s IP Adress</string>
    <string name="search">search</string>
    <string name="allsearch_j">全検索</string>
    <string name="downarrow">↓</string>
    <string name="month_j">月</string>
    <string name="year_j">年</string>
    <string name="day_j">日</string>
    <string name="readcsv">readcsv</string>
    <string name="selectfile">selectfile</string>
    <string name="change">change</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>