<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDataActivity">

    <EditText
        android:id="@+id/editTextdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTexttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextdate"
        app:layout_constraintStart_toStartOf="@+id/editTextdate"
        app:layout_constraintTop_toBottomOf="@+id/editTextdate"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTexttime"
        app:layout_constraintStart_toStartOf="@+id/editTexttime"
        app:layout_constraintTop_toBottomOf="@+id/editTexttime"
        android:autofillHints="" />

    <Button
        android:id="@+id/add_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextname"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/delete_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="@+id/add_database"
        app:layout_constraintStart_toStartOf="@+id/add_database"
        app:layout_constraintTop_toBottomOf="@+id/add_database" />

    <Button
        android:id="@+id/delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/delete_one"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/delete_one"
        app:layout_constraintTop_toBottomOf="@+id/delete_one"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>