<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Database.ReadCSVActivity">

    <TextView
        android:id="@+id/file_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="読み込むファイル名"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/selectfilebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="504dp"
        android:text="@string/selectfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_csvbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectfilebutton"
        app:layout_constraintVertical_bias="0.137" />

    <Button
        android:id="@+id/del_csvbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/change_csvbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/change_csvbutton"
        app:layout_constraintTop_toTopOf="@+id/change_csvbutton" />

    <TextView
        android:id="@+id/addordeletetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="読みこんだデータを"
        app:layout_constraintBottom_toTopOf="@+id/add_csvbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectfilebutton"
        app:layout_constraintVertical_bias="0.789" />

    <Button
        android:id="@+id/change_csvbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/change"
        app:layout_constraintBottom_toBottomOf="@+id/add_csvbutton"
        app:layout_constraintStart_toEndOf="@+id/add_csvbutton"
        app:layout_constraintTop_toTopOf="@+id/add_csvbutton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/selectfilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/selectfilebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/file_text"
        app:layout_constraintVertical_bias="0.515" />
</androidx.constraintlayout.widget.ConstraintLayout>