<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/server_psi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:text="@string/server"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/client_psi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/server_psi"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/server_psi"
        app:layout_constraintTop_toBottomOf="@+id/server_psi"
        app:layout_constraintVertical_bias="0.352" />

    <Button
        android:id="@+id/to_adddata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/server_s_ip_adress"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/client_psi"
        app:layout_constraintEnd_toStartOf="@+id/client_psi"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/client_psi"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/server_ip_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/server_psi"
        app:layout_constraintEnd_toStartOf="@+id/server_psi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/server_psi" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="367dp"
        android:layout_height="149dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/server_psi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck">

        <RadioButton
            android:id="@+id/radio_monthlater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="過去1か月のデータを用いる"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/radio_3monthlater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="過去3ヶ月分のデータを用いる"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/radio_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="すべてのデータを用いる"
            tools:ignore="VisualLintButtonSize" />
    </RadioGroup>

    <TextView
        android:id="@+id/kamei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_adddata" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scanrecycler"
        android:layout_width="400dp"
        android:layout_height="261dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kamei" />

</androidx.constraintlayout.widget.ConstraintLayout>