<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Database.SearchActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="414dp"
        android:layout_height="217dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Search_second_month"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/Search_second_year"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Search_first_year"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Search_first_year"
        app:layout_constraintTop_toBottomOf="@+id/SearchName"
        app:layout_constraintVertical_bias="0.32"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/allsearchtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allsearch_j"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <Button
        android:id="@+id/namesearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/rangesearch"
        app:layout_constraintEnd_toEndOf="@+id/monthsearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/monthsearch" />

    <TextView
        android:id="@+id/searchtext_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="月のデータを検索"
        app:layout_constraintBottom_toTopOf="@+id/SearchMonth_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allsearchtext"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/month_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month_j"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/searchtext_name"
        app:layout_constraintEnd_toStartOf="@+id/monthsearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/SearchMonth_month"
        app:layout_constraintTop_toTopOf="@+id/SearchMonth_month"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/rangesearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/month_text3"
        app:layout_constraintEnd_toEndOf="@+id/namesearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/namesearch"
        app:layout_constraintTop_toBottomOf="@+id/month_text2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/month_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month_j"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/Search_second_month"
        app:layout_constraintEnd_toEndOf="@+id/month_text2"
        app:layout_constraintStart_toEndOf="@+id/Search_second_month"
        app:layout_constraintTop_toTopOf="@+id/Search_second_month" />

    <TextView
        android:id="@+id/searchtext_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="仮名を検索"
        app:layout_constraintBottom_toTopOf="@+id/SearchName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/SearchMonth_year"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="datetime"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/searchtext_name"
        app:layout_constraintEnd_toStartOf="@+id/monthsearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/searchtext_month"
        app:layout_constraintTop_toBottomOf="@+id/allsearchtext"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/month_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month_j"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/Search_first_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Search_first_month"
        app:layout_constraintTop_toTopOf="@+id/Search_first_month"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/Search_second_month"
        android:layout_width="62dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/year_text3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/year_text3"
        app:layout_constraintTop_toTopOf="@+id/year_text3"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downarrow"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/year_text3"
        app:layout_constraintEnd_toStartOf="@+id/rangesearch"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_text2" />

    <TextView
        android:id="@+id/year_text3"
        android:layout_width="34dp"
        android:layout_height="44dp"
        android:text="@string/year_j"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/Search_second_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Search_second_year"
        app:layout_constraintTop_toTopOf="@+id/Search_second_year"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/SearchMonth_month"
        android:layout_width="56dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/searchtext_name"
        app:layout_constraintEnd_toStartOf="@+id/monthsearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/year_text"
        app:layout_constraintTop_toTopOf="@+id/year_text"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Search_first_month"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/year_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/year_text2"
        app:layout_constraintTop_toTopOf="@+id/year_text2"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/monthsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/namesearch"
        app:layout_constraintEnd_toEndOf="@+id/allsearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/allsearch"
        app:layout_constraintTop_toBottomOf="@+id/allsearch"
        app:layout_constraintVertical_bias="0.265"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/SearchName"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginBottom="504dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/namesearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/searchtext_name"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/year_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_j"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/Search_first_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Search_first_year"
        app:layout_constraintTop_toTopOf="@+id/Search_first_year"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/allsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/allsearchtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toEndOf="@+id/allsearchtext"
        app:layout_constraintTop_toTopOf="@+id/allsearchtext"
        app:layout_constraintVertical_bias="0.444"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_j"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/searchtext_name"
        app:layout_constraintEnd_toStartOf="@+id/monthsearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/SearchMonth_year"
        app:layout_constraintTop_toTopOf="@+id/SearchMonth_year"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Search_first_year"
        android:layout_width="56dp"
        android:layout_height="45dp"
        android:layout_marginBottom="44dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/Search_second_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/searchtext_range"
        app:layout_constraintTop_toBottomOf="@+id/SearchName"
        app:layout_constraintVertical_bias="0.964"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/searchtext_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="何年何月何日～何年何月何日までのデータを検索"
        app:layout_constraintBottom_toTopOf="@+id/Search_first_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchName"
        app:layout_constraintVertical_bias="0.771" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="711dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="715dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <EditText
        android:id="@+id/Search_first_day"
        android:layout_width="58dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/month_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/month_text2"
        app:layout_constraintTop_toTopOf="@+id/month_text2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Search_second_day"
        android:layout_width="58dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/month_text3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/month_text3"
        app:layout_constraintTop_toTopOf="@+id/month_text3"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/day_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_j"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/Search_first_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Search_first_day"
        app:layout_constraintTop_toTopOf="@+id/Search_first_day"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/day_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_j"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/Search_second_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Search_second_day"
        app:layout_constraintTop_toTopOf="@+id/Search_second_day"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>